# docs/swagger.json
@@ -7,33 +7,6 @@
         }
     },
     "paths": {
-        "/api/auth": {
-            "post": {
-                "description": "Get AccessToken By ApiKey",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "parameters": [
-                    {
-                        "description": "AccessToken Model",
-                        "name": "credential",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.ClientCredential"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
         "/api/healthz": {
             "get": {
                 "description": "Get Healthz",
@@ -52,11 +25,6 @@
         },
         "/api/v1/paymaster/{network}": {
             "post": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
                 "description": "Paymaster JSON-RPC API",
                 "consumes": [
                     "application/json"
@@ -88,13 +56,101 @@
                     }
                 }
             }
+        },
+        "/api/v1/paymaster_sponsor/deposit": {
+            "post": {
+                "description": "Deposit Sponsor",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DepositSponsor"
+                ],
+                "parameters": [
+                    {
+                        "description": "DepositSponsorRequest Model",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.DepositSponsorRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "relay Request  Body Hash",
+                        "name": "relay_hash",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "relay Request  Body Hash",
+                        "name": "relay_signature",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/paymaster_sponsor/withdraw": {
+            "post": {
+                "description": "Withdraw Sponsor",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sponsor"
+                ],
+                "parameters": [
+                    {
+                        "description": "WithdrawSponsorRequest Model",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.WithdrawSponsorRequest"
+                        }
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Is Test Net",
+                        "name": "is_test_net",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "model.ClientCredential": {
+        "model.DepositSponsorRequest": {
             "type": "object",
             "properties": {
-                "apiKey": {
+                "deposit_address": {
+                    "type": "string"
+                },
+                "deposit_source": {
+                    "type": "string"
+                },
+                "is_test_net": {
+                    "type": "boolean"
+                },
+                "pay_user_id": {
+                    "type": "string"
+                },
+                "time_stamp": {
+                    "type": "integer"
+                },
+                "tx_hash": {
                     "type": "string"
                 }
             }
@@ -114,6 +170,29 @@
                 "params": {
                     "type": "array",
                     "items": {}
+                }
+            }
+        },
+        "model.WithdrawSponsorRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "isTestNet": {
+                    "type": "boolean"
+                },
+                "payUserId": {
+                    "type": "string"
+                },
+                "txHash": {
+                    "type": "string"
+                },
+                "txInfo": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         }
