# rpc_server/api/v1/sponsor.go
@@ -13,6 +13,7 @@ import (
 	"encoding/json"
 	"errors"
 	"fmt"
+	"github.com/ethereum/go-ethereum/accounts"
 	"github.com/ethereum/go-ethereum/common"
 	"github.com/ethereum/go-ethereum/core/types"
 	"github.com/ethereum/go-ethereum/crypto"
@@ -24,16 +25,16 @@ import (
 	"log"
 	"math/big"
 	"net/http"
-	"strconv"
 )
 
 // DepositSponsor
-// @Tags Sponsor
+// @Tags DepositSponsor
 // @Description Deposit Sponsor
 // @Accept json
 // @Product json
-// @Param request body DepositSponsorRequest true "DepositSponsorRequest Model
-// @Param is_test_net path boolean true "Is Test Net"
+// @Param request body model.DepositSponsorRequest true "DepositSponsorRequest Model"
+// @Param relay_hash header string false "relay Request  Body Hash"
+// @Param relay_signature header string false "relay Request  Body Hash"
 // @Router /api/v1/paymaster_sponsor/deposit [post]
 // @Success 200
 func DepositSponsor(ctx *gin.Context) {
@@ -44,6 +45,12 @@ func DepositSponsor(ctx *gin.Context) {
 		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, http.StatusBadRequest, errStr)
 		return
 	}
+	if request.DepositSource != "dashboard" {
+		errStr := fmt.Sprintf("not Support Source")
+		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, http.StatusBadRequest, errStr)
+		return
+	}
+	//validate Signature
 	inputJson, err := json.Marshal(request)
 	if err != nil {
 		response.SetHttpCode(http.StatusInternalServerError).FailCode(ctx, http.StatusInternalServerError, err.Error())
@@ -56,14 +63,13 @@ func DepositSponsor(ctx *gin.Context) {
 		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, http.StatusBadRequest, "Deposit Source Error :Not Support Source")
 		return
 	}
-
 	err = ValidateSignature(ctx.GetHeader("relay_hash"), ctx.GetHeader("relay_signature"), inputJson, signerAddress)
 	if err != nil {
 		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, http.StatusBadRequest, err.Error())
 		return
 	}
+	//validate Deposit
 	sender, amount, err := validateDeposit(&request)
-
 	if err != nil {
 		response.SetHttpCode(http.StatusBadRequest).FailCode(ctx, http.StatusBadRequest, err.Error())
 		return
@@ -74,6 +80,8 @@ func DepositSponsor(ctx *gin.Context) {
 		Amount:    amount,
 		TxHash:    request.TxHash,
 		PayUserId: request.PayUserId,
+		Source:    request.DepositSource,
+		IsTestNet: request.IsTestNet,
 	}
 	result, err := sponsor_manager.DepositSponsor(&depositInput)
 	if err != nil {
@@ -96,7 +104,7 @@ func ValidateSignature(originHash string, signatureHex string, inputJson []byte,
 
 	hashByte, _ := utils.DecodeStringWithPrefix(originHash)
 	signatureByte, _ := utils.DecodeStringWithPrefix(signatureHex)
-	pubKey, err := crypto.SigToPub(hashByte, signatureByte)
+	pubKey, err := crypto.SigToPub(accounts.TextHash(hashByte), signatureByte)
 	if err != nil {
 		log.Fatalf("Failed to recover public key: %v", err)
 	}
@@ -105,7 +113,6 @@ func ValidateSignature(originHash string, signatureHex string, inputJson []byte,
 		return xerrors.Errorf("Signer Address Not Match")
 	}
 	return nil
-
 }
 func validateDeposit(request *model.DepositSponsorRequest) (sender *common.Address, amount *big.Float, err error) {
 	txHash := request.TxHash
@@ -114,7 +121,10 @@ func validateDeposit(request *model.DepositSponsorRequest) (sender *common.Addre
 		return nil, nil, err
 	}
 	// check tx
-	_, err = sponsor_manager.GetLogByTxHash(txHash)
+	_, err = sponsor_manager.GetLogByTxHash(txHash, request.IsTestNet)
+	if err == nil {
+		return nil, nil, xerrors.Errorf("Transaction [%s] already exist", txHash)
+	}
 	if err != nil {
 		if !errors.Is(err, gorm.ErrRecordNotFound) {
 			return nil, nil, err
@@ -127,7 +137,6 @@ func validateDeposit(request *model.DepositSponsorRequest) (sender *common.Addre
 	if tx.Type() != types.DynamicFeeTxType {
 		return nil, nil, xerrors.Errorf("Tx Type is not DynamicFeeTxType")
 	}
-	logrus.Info(tx.Type())
 	txSender, err := types.Sender(types.NewLondonSigner(tx.ChainId()), tx)
 	if err != nil {
 		logrus.Errorf("Get Sender Error [%v]", err)
@@ -137,7 +146,6 @@ func validateDeposit(request *model.DepositSponsorRequest) (sender *common.Addre
 	if request.IsTestNet {
 		//Only ETH
 		if tx.Value().Uint64() == 0 {
-
 			return nil, nil, xerrors.Errorf("Tx Value is 0")
 		}
 		if tx.To() == nil {
@@ -147,19 +155,21 @@ func validateDeposit(request *model.DepositSponsorRequest) (sender *common.Addre
 			return nil, nil, xerrors.Errorf("Tx To Address is not Sponsor Address")
 		}
 		value := tx.Value()
-		valueFloat := new(big.Float).SetInt(value)
-		amount, err = price_compoent.GetTokenCostInUsd(global_const.TokenTypeETH, valueFloat)
+		valueEth := utils.ConvertBalanceToEther(value)
+		logrus.Infof("ETH amount : %s", valueEth)
+
+		amount, err = price_compoent.GetTokenCostInUsd(global_const.TokenTypeETH, valueEth)
 		if err != nil {
 			return nil, nil, err
 		}
 	} else {
+		return nil, nil, xerrors.Errorf("not Support MainNet Right Now")
 		//contractAddress := tx.To()
 		//chain_service.CheckContractAddressAccess(contractAddress,"")
 		//Only Usdt
 
 	}
 	return sender, amount, nil
-
 }
 
 func GetInfoByHash(txHash string, client *ethclient.Client) (*types.Transaction, error) {
@@ -172,7 +182,6 @@ func GetInfoByHash(txHash string, client *ethclient.Client) (*types.Transaction,
 		}
 		return nil, err
 	}
-
 	return tx, nil
 }
 
@@ -181,7 +190,7 @@ func GetInfoByHash(txHash string, client *ethclient.Client) (*types.Transaction,
 // @Description Withdraw Sponsor
 // @Accept json
 // @Product json
-// @Param request body WithdrawSponsorRequest true "WithdrawSponsorRequest Model"
+// @Param request body model.WithdrawSponsorRequest true "WithdrawSponsorRequest Model"
 // @Param is_test_net path boolean true "Is Test Net"
 // @Router /api/v1/paymaster_sponsor/withdraw [post]
 // @Success 200
@@ -198,75 +207,6 @@ func WithdrawSponsor(ctx *gin.Context) {
 	if err != nil {
 		response.SetHttpCode(http.StatusInternalServerError).FailCode(ctx, http.StatusInternalServerError, err.Error())
 		return
-	}
-	response.WithDataSuccess(ctx, result)
-	return
-}
-
-type sponsorDepositTransaction struct {
-	TxHash     string                  `json:"tx_hash"`
-	Amount     string                  `json:"amount"`
-	UpdateType global_const.UpdateType `json:"update_type"`
-}
-
-// GetSponsorDepositAndWithdrawTransactions
-// @Tags Sponsor
-// @Description Get Sponsor Deposit And Withdraw Transactions
-// @Accept json
-// @Product json
-// @Param userId path string true "User Id"
-// @Param is_test_net path boolean true "Is Test Net"
-// @Router /api/v1/paymaster_sponsor/deposit_log
-// @Success 200
-func GetSponsorDepositAndWithdrawTransactions(ctx *gin.Context) {
-	userId := ctx.Param("user_id")
-	textNet := ctx.Param("is_test_net")
-	// convertTOBool
-	isTestNet, _ := strconv.ParseBool(textNet)
-	response := model.GetResponse()
-	models, err := sponsor_manager.GetDepositAndWithDrawLog(userId, isTestNet)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			response.FailCode(ctx, 400, "No Deposit Transactions")
-		}
-	}
-	trans := make([]sponsorDepositTransaction, 0)
-	for _, depositModel := range models {
-		tran := sponsorDepositTransaction{
-			TxHash: depositModel.TxHash,
-			Amount: depositModel.Amount.String(),
-		}
-		trans = append(trans, tran)
-	}
-	response.WithDataSuccess(ctx, trans)
-	return
-}
-
-// GetSponsorMetaData
-// @Tags Sponsor
-// @Description Get Sponsor Balance
-// @Accept json
-// @Product json
-// @Param userId path string true "User Id"
-// @Router /api/v1/paymaster_sponsor/balance/{userId}
-// @Success 200
-func GetSponsorMetaData(ctx *gin.Context) {
-	userId := ctx.Param("userId")
-	textNet := ctx.Param("is_test_net")
-	isTestNet, _ := strconv.ParseBool(textNet)
-	response := model.GetResponse()
-	balance, err := sponsor_manager.FindUserSponsorBalance(userId, isTestNet)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			response.FailCode(ctx, 400, "No Balance")
-		}
-	}
-	result := struct {
-		AvailableBalance string `json:"available_balance"`
-		SponsorAddress   string `json:"sponsor_address"`
-	}{
-		AvailableBalance: balance.AvailableBalance.String(),
-		SponsorAddress:   balance.SponsorAddress,
 	}
 	response.WithDataSuccess(ctx, result)
 	return
